chore: Clean up old circuit implementations and add JMH benchmarks
Circuit cleanup:
- Remove old circuit implementations (FsCircuit, FsCircuitPipe)
- Remove experimental circuits (batch, disruptor, ring, valve)
- Rename FsCircuit to FsExperimentalCircuit for reference
- Add FsSimpleCircuit (ConcurrentLinkedQueue-based, for comparison)
- Update FsCell, FsChannel, FsConduit, FsFlow to use new circuit API

JMH benchmarks:
- Add Humainary's benchmark suite (PipeOps, CircuitOps, ConduitOps, etc.)
- Add Serventis benchmarks (StatusOps, SystemOps, etc.)
- Add local benchmark variants (SimpleCircuitOps, RingBufferOps)
- Remove old custom benchmarks

Other:
- Update .claude/commands/bench/* for benchmark skill commands
- Add BMAD workflow commands
- Add run-benchmarks.sh helper script
- Clean up old benchmark result files

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>