@@ -1,200 +1,198 @@
 # Fullerstack Substrates - Documentation Index
 
-**Project:** Concrete implementation of Humainary Substrates API 1.0.0-PREVIEW
-**Status:** 96% API Compliant (24/27 files correct)
-**Generated:** 2025-11-24
+**Version:** 1.0.0-SNAPSHOT
+**API Version:** Humainary Substrates 1.0.0-PREVIEW
+**Java Version:** 25 (Preview Features Required)
+**Last Updated:** 2025-12-15
+**TCK Compliance:** 381/381 tests (100%)
 
 ---
 
-## 📋 Quick Navigation
+## Overview
 
-### Critical Documents
+Fullerstack Substrates is a **fully compliant implementation** of the [Humainary Substrates API](https://github.com/humainary-io/substrates-api-java), an event-driven observability framework designed by William Louth. This library provides the concrete runtime implementation of the Substrates specification.
 
-1. **[CRITICAL-FINDINGS.md](./CRITICAL-FINDINGS.md)** - ⚠️ READ THIS FIRST
-   - Identifies the Scheduler abstraction issue
-   - Explains why code is "broken between two implementations"
-   - Shows which files are affected
-
-2. **[API-COMPLIANCE-ANALYSIS.md](./API-COMPLIANCE-ANALYSIS.md)** - Comprehensive Compliance Report
-   - Compares implementation vs official API
-   - Lists all 24 compliant files
-   - Details Scheduler abstraction problem
-   - Provides fix recommendations
-
-3. **[IMPLEMENTATION-STORIES.md](./IMPLEMENTATION-STORIES.md)** - Actionable Fix Plan
-   - Story 1: Remove Scheduler abstraction (P0 - Critical)
-   - Story 2: Clean up experimental code (P2)
-   - Story 3: Run TCK validation (P1)
-   - Story 4: Update documentation (P2)
-
-### Reference Documents
-
-4. **[implementation-analysis.md](./implementation-analysis.md)** - Source Code Analysis
-   - Detailed analysis of all 27 source files
-   - Implementation status per component
-   - Architecture patterns identified
-
-5. **[SUBSTRATES_API_ANALYSIS.md](/workspaces/fullerstack-humainary/SUBSTRATES_API_ANALYSIS.md)** - API Specification
-   - Complete interface reference from Substrates.java (4,917 lines)
-   - All 10 non-sealed interfaces requiring implementation
-   - Method signatures and requirements
-   - Inheritance hierarchies
-
-### Project Documentation
-
-6. **[../CLAUDE.md](/workspaces/fullerstack-humainary/CLAUDE.md)** - Claude Code Instructions
-   - Build commands and prerequisites
-   - Architecture overview
-   - Development guidelines
-   - Performance characteristics
-
-7. **[../fullerstack-substrates/docs/](/workspaces/fullerstack-humainary/fullerstack-substrates/docs/)** - Implementation Docs
-   - ARCHITECTURE.md - Detailed architecture
-   - ASYNC-ARCHITECTURE.md - Virtual CPU Core pattern
-   - DEVELOPER-GUIDE.md - Best practices
-   - examples/ - Usage examples
+**Key Concept:** Think of it like `java.util.List` (interface from Humainary) vs `ArrayList` (implementation from Fullerstack).
 
 ---
 
-## 🎯 Executive Summary
+## Quick Start
 
-### Current Status
+### Prerequisites
 
-**Implementation Quality:** 96% Complete
-- ✅ 24/27 files fully implement official Substrates API
-- ❌ 3 files use proprietary Scheduler abstraction (NOT in API)
-- ⚠️ 1 critical blocker preventing compilation/execution
+```bash
+# Install Java 25 via SDKMAN
+sdk install java 25.0.1-open
+sdk use java 25.0.1-open
 
-### The Problem
+# Install Humainary Substrates API (not yet on Maven Central)
+git clone https://github.com/humainary-io/substrates-api-java.git
+cd substrates-api-java && mvn clean install
+```
 
-Your codebase is "broken caught between two implementations" because:
-
-1. **Old implementation:** Used internal `execute()` method on Circuit
-2. **New implementation:** Introduced `Scheduler` interface with `schedule()` method
-3. **Never completed transition:** SequentialCircuit still has `execute()`, but ProducerPipe/EmissionChannel expect `schedule()`
-
-**Result:** Method name mismatch → ClassCastException at runtime
-
-### The Solution
-
-**Delete the Scheduler abstraction** and use the official API:
+### Basic Usage
 
 ```java
-// WRONG (current - uses proprietary Scheduler):
-scheduler.schedule(() -> callback());
+import static io.humainary.substrates.api.Substrates.*;
 
-// RIGHT (official API - use Circuit.pipe()):
-circuit.pipe(callbackPipe).emit(value);
+// Create a circuit (event orchestration hub)
+try (Circuit circuit = cortex().circuit(cortex().name("my-app"))) {
+
+    // Create a conduit with pipe composer
+    Conduit<Pipe<String>, String> messages = circuit.conduit(
+        cortex().name("messages"),
+        Composer.pipe()
+    );
+
+    // Subscribe to emissions
+    messages.subscribe((subject, registrar) ->
+        registrar.register(msg -> System.out.println("Received: " + msg))
+    );
+
+    // Emit through a pipe
+    Pipe<String> producer = messages.get(cortex().name("producer-1"));
+    producer.emit("Hello, Substrates!");
+
+    circuit.await(); // Wait for async processing
+}
 ```
 
-**Effort:** 2-3 hours to fix (see Story 1 in IMPLEMENTATION-STORIES.md)
+---
+
+## Documentation Index
+
+### Core Documentation
+
+| Document | Description |
+|----------|-------------|
+| [ARCHITECTURE.md](../fullerstack-substrates/docs/ARCHITECTURE.md) | Core architecture, sealed hierarchy, data flow |
+| [ASYNC-ARCHITECTURE.md](../fullerstack-substrates/docs/ASYNC-ARCHITECTURE.md) | Virtual CPU Core pattern, Valve design |
+| [DEVELOPER-GUIDE.md](../fullerstack-substrates/docs/DEVELOPER-GUIDE.md) | Best practices, performance tips, testing |
+| [CIRCUIT-PERFORMANCE-PLAN.md](../fullerstack-substrates/docs/CIRCUIT-PERFORMANCE-PLAN.md) | **Active** - Performance optimization plan |
+
+### Examples
+
+| Example | Description |
+|---------|-------------|
+| [01-HelloSubstrates](../fullerstack-substrates/docs/examples/01-HelloSubstrates.md) | Basic circuit and conduit usage |
+| [02-Transformations](../fullerstack-substrates/docs/examples/02-Transformations.md) | Flow transformations (sift, limit, skip) |
+| [03-MultipleSubscribers](../fullerstack-substrates/docs/examples/03-MultipleSubscribers.md) | Fan-out patterns |
+| [04-ResourceManagement](../fullerstack-substrates/docs/examples/04-ResourceManagement.md) | Scope and lifecycle management |
+| [05-SemioticObservability](../fullerstack-substrates/docs/examples/05-SemioticObservability.md) | Serventis instruments |
+
+### Benchmarks & Performance
+
+| Document | Description |
+|----------|-------------|
+| [CIRCUIT-PERFORMANCE-PLAN.md](../fullerstack-substrates/docs/CIRCUIT-PERFORMANCE-PLAN.md) | Performance improvement plan |
+| [BENCHMARK-RESULTS-2025-12-13.md](../fullerstack-substrates/docs/BENCHMARK-RESULTS-2025-12-13.md) | Latest benchmark results |
+| [Humainary BENCHMARKS.md](../substrates-api-java/BENCHMARKS.md) | Reference implementation benchmarks |
 
 ---
 
-## 📊 Compliance Matrix
-
-| Interface | Required Methods | Our Implementation | Status |
-|-----------|-----------------|-------------------|--------|
-| **Cortex** | 31 factory methods | CortexRuntime (343 lines) | ✅ 100% |
-| **Circuit** | 11 methods | SequentialCircuit (259 lines) | ✅ 100%* |
-| **Conduit** | 5 methods | RoutingConduit (422 lines) | ✅ 100% |
-| **Channel** | 3 methods | EmissionChannel (132 lines) | ⚠️ Uses Scheduler |
-| **Cell** | 6 methods | CellNode (173 lines) | ✅ 100% |
-| **Subject** | 5 methods | ContextualSubject (173 lines) | ✅ 100% |
-| **State** | 10 methods | LinkedState (328 lines) | ✅ 100% |
-| **Name** | 12 methods | InternedName (437 lines) | ✅ 100% |
-| **Flow** | 14 methods | FlowRegulator (420 lines) | ✅ 100% |
-| **Pipe** | 2 methods | ProducerPipe (140 lines) | ⚠️ Uses Scheduler |
-| **Scope** | 6 methods | ManagedScope (207 lines) | ✅ 100% |
-| **Slot** | 3 methods | TypedSlot (124 lines) | ✅ 100% |
-| **Subscription** | 2 methods | CallbackSubscription (76 lines) | ✅ 100% |
-| **Subscriber** | 2 methods | ContextSubscriber (107 lines) | ✅ 100% |
-
-**\*** = Correct implementation but uses internal `execute()` instead of exposing work via `pipe()`
-
----
-
-## 🚀 Next Steps
-
-### Immediate Actions (2-3 hours)
-
-1. **Fix Story 1:** Remove Scheduler abstraction
-   - Delete `circuit/Scheduler.java`
-   - Refactor ProducerPipe to use `circuit.pipe(callback)`
-   - Refactor EmissionChannel to pass Circuit directly
-   - Run tests
-
-2. **Verify Story 3:** Run TCK test suite
-   - Should pass 381/381 tests after fix
-   - Confirms 100% API compliance
-
-### Follow-Up Actions (2 hours)
-
-3. **Optional Story 2:** Clean up experimental code
-   - Move AsyncPipe, ExperimentalCircuit, AllInOne to test sources
-
-4. **Polish Story 4:** Update documentation
-   - Remove Scheduler references
-   - Add TCK compliance badge
-
----
-
-## 📁 File Organization
+## Source Code Structure
 
 ```
-/workspaces/fullerstack-humainary/
-├── docs/                           ← Documentation (this folder)
-│   ├── index.md                    ← THIS FILE
-│   ├── CRITICAL-FINDINGS.md        ← Problem identification
-│   ├── API-COMPLIANCE-ANALYSIS.md  ← Detailed compliance report
-│   ├── IMPLEMENTATION-STORIES.md   ← Fix plan (4 stories)
-│   ├── implementation-analysis.md  ← Source code analysis
-│   └── project-scan-report.json    ← Workflow state
+fullerstack-substrates/src/main/java/io/fullerstack/substrates/
+├── FsCortexProvider.java     # SPI entry point (loaded via ServiceLoader)
+├── FsCortex.java             # Cortex implementation (factory)
+├── FsCircuit.java            # Base circuit (ring buffer)
+├── FsConduit.java            # Conduit implementation (channel routing)
+├── FsChannel.java            # Channel implementation
+├── FsCircuitPipe.java        # Unified pipe implementation
+├── FsFlow.java               # Flow transformations (sift, limit, skip)
+├── FsCell.java               # Hierarchical computation cells
+├── FsName.java               # Interned hierarchical names
+├── FsState.java              # Immutable state container
+├── FsSubject.java            # Contextual subject with parent/state/type
+├── FsScope.java              # Resource lifecycle management
+├── FsReservoir.java          # Subscriber management
+├── FsSift.java               # Filter transformations
+├── FsSlot.java               # Typed state slots (record)
 │
-├── SUBSTRATES_API_ANALYSIS.md      ← API specification reference
-├── CLAUDE.md                        ← Claude Code instructions
-├── README.md                        ← Project overview
-│
-└── fullerstack-substrates/         ← Implementation
-    ├── src/main/java/              ← Source code (27 files)
-    │   └── io/fullerstack/substrates/
-    │       ├── circuit/            ← ⚠️ Scheduler.java (DELETE)
-    │       ├── pipe/               ← ⚠️ Uses Scheduler (FIX)
-    │       ├── channel/            ← ⚠️ Uses Scheduler (FIX)
-    │       └── [24 other packages] ← ✅ All correct
-    │
-    ├── src/test/java/              ← Tests
-    ├── src/jmh/java/               ← Benchmarks
-    └── docs/                        ← Architecture docs
-        ├── ARCHITECTURE.md
-        ├── ASYNC-ARCHITECTURE.md
-        ├── DEVELOPER-GUIDE.md
-        └── examples/
+├── valve/
+│   └── FsValveCircuit.java   # MPSC linked list circuit (fastest)
+├── optimized/
+│   └── FsOptimizedCircuit.java # Ring buffer with cache-line padding
+├── ring/
+│   └── FsRingCircuit.java    # Current default circuit
+├── batch/
+│   └── FsBatchCircuit.java   # Batch processing circuit
+└── disruptor/
+    └── FsDisruptorCircuit.java # LMAX Disruptor integration
+```
+
+### Source Metrics
+
+| Category | Files | Lines | Description |
+|----------|-------|-------|-------------|
+| Main Sources | 28 | ~5,500 | Core implementation |
+| Test Sources | 8 | ~400 | Contract tests |
+| JMH Benchmarks | 43 | ~3,000 | Performance benchmarks |
+| **Total** | **79** | **~8,900** | |
+
+---
+
+## Circuit Implementations
+
+| Circuit | Emit Latency | Await Consistency | Use Case |
+|---------|--------------|-------------------|----------|
+| **FsValveCircuit** | 27.6 ns (fastest) | High variance | General purpose |
+| **FsOptimizedCircuit** | 43.9 ns | Most consistent | Latency-sensitive |
+| **FsRingCircuit** | 94.4 ns (default) | Good | Current default |
+| **FsBatchCircuit** | — | — | High-throughput |
+| **FsDisruptorCircuit** | — | — | LMAX Disruptor |
+
+Select via system property:
+```bash
+java -Dfullerstack.circuit.type=valve -jar app.jar
+# Options: valve, optimized, ring, base
 ```
 
 ---
 
-## 🔗 External References
+## Critical Issues
 
-### Official Humainary Resources
+### Performance Optimization (Active)
 
-- **Substrates API:** `/workspaces/substrates-api-java/api/src/main/java/io/humainary/substrates/api/Substrates.java`
-- **TCK Test Suite:** `/workspaces/substrates-api-java/tck/`
-- **Blog:** https://humainary.io/blog/category/observability-x/
+**Status:** Under Investigation
+**Document:** [CIRCUIT-PERFORMANCE-PLAN.md](../fullerstack-substrates/docs/CIRCUIT-PERFORMANCE-PLAN.md)
 
-### Build & Test Commands
+| Metric | Previous Best | Current | Target (Humainary) |
+|--------|---------------|---------|-------------------|
+| Single Emit | ~16 ns | 27.6 ns | 10.6 ns |
+| Batch Emit | ~20 ns | 29.1 ns | 11.8 ns |
+
+A high-performance circuit implementation was accidentally lost. Recovery efforts are ongoing with guidance from William Louth.
+
+---
+
+## Build Commands
 
 ```bash
 # Ensure Java 25 active
 source /usr/local/sdkman/bin/sdkman-init.sh
 sdk use java 25.0.1-open
 
-# Build implementation
+# Build
 cd fullerstack-substrates
 mvn clean install
 
-# Run TCK (after Scheduler fix)
-cd /workspaces/substrates-api-java/tck
+# Run tests
+mvn test
+
+# Format code
+mvn spotless:apply
+
+# Run benchmarks
+mvn clean package
+java --enable-preview -jar target/benchmarks.jar
+
+# Run specific benchmark
+java --enable-preview -jar target/benchmarks.jar "OptimizedCircuitBenchmark"
+
+# Run TCK
+cd ../substrates-api-java/tck
 mvn test -Dtck \
   -Dtck.spi.groupId=io.fullerstack \
   -Dtck.spi.artifactId=fullerstack-substrates \
@@ -203,16 +201,50 @@ mvn test -Dtck \
 
 ---
 
-## ✅ Key Takeaways
+## Dependencies
 
-1. **Your implementation is fundamentally sound** - 96% of files are perfect
-2. **Single root cause identified** - Scheduler abstraction (NOT in official API)
-3. **Clear fix path** - 2-3 hours to remove Scheduler, use Circuit.pipe()
-4. **High confidence** - TCK will pass 381/381 tests after fix
-
-**Bottom line:** You're very close! Remove the Scheduler abstraction and you'll have a 100% API-compliant implementation ready for production.
+| Dependency | Version | Purpose |
+|------------|---------|---------|
+| Humainary Substrates API | 1.0.0-PREVIEW | Core API specification |
+| Humainary Serventis | 1.0.0-PREVIEW | 24 observability instruments |
+| Lombok | 1.18.34 | Boilerplate reduction |
+| Vavr | 0.10.4 | Functional data structures |
+| SLF4J | 2.0.16 | Logging facade |
+| LMAX Disruptor | 4.0.0 | High-performance ring buffer |
+| JMH | 1.37 | Microbenchmarking |
+| JUnit 5 | 5.11.0 | Testing framework |
 
 ---
 
-*Generated by BMad Method document-project workflow*
-*Last updated: 2025-11-24*
+## Architecture Principles
+
+1. **API Purity** - Application code imports only `io.humainary.substrates.api.*`
+2. **SPI Loading** - `FsCortexProvider` loaded via `ServiceLoader`
+3. **Async Processing** - Always use `circuit.await()` in tests
+4. **Resource Cleanup** - Use try-with-resources for Circuits and Scopes
+5. **Caching** - Cache Pipes for repeated emissions
+6. **Thread Safety** - Don't block in subscriber callbacks
+
+---
+
+## External Resources
+
+- [Humainary Substrates API](https://github.com/humainary-io/substrates-api-java) - Official API specification
+- [Observability X Blog](https://humainary.io/blog/category/observability-x/) - William Louth's architectural vision
+- [Serventis SIGNS.md](../substrates-api-java/ext/serventis/SIGNS.md) - Semiotic observability concepts
+
+---
+
+## Project Status
+
+| Aspect | Status |
+|--------|--------|
+| API Compliance | 100% (381/381 TCK tests) |
+| Performance | Under optimization |
+| Documentation | Complete |
+| Examples | 5 tutorials |
+| Benchmarks | Comprehensive |
+
+---
+
+*Generated by Document Project Workflow - 2025-12-15*
